# udacity_CarND

./: README.md
Self-Driving_Car_part_1/Lesson_04_Computer_Vision/: Lesson 4.12 edges.ipynb  Lesson 4.15 Hough Transform .ipynb  Lesson 4.4 CV Fundamental.ipynb
Self-Driving_Car_part_1/Lesson_06_Camera_Calibration/: Lesson 6.12.calibration.ipynb  Lesson 6.18.transform.ipynb
Self-Driving_Car_part_1/Lesson_07_Gradient_And_Color_Spaces/: Lesson 7.11 HSL.ipynb  Lesson 7.12 Color and Gradient.ipynb  Lesson 7.3 sobel.ipynb
Self-Driving_Car_part_1/Lesson_08_Advanched_Computer_Vision/: Lesson 8.4 Finding lanes.ipynb  Lesson 8.5 Finding lanes. Dynamic.ipynb  Lesson 8.6 Curvature 1.ipynb  Lesson 8.7 Curvature 2.ipynb
Self-Driving_Car_part_1/Lesson_10_Neural_Networks/: Lesson 10.15 Logical perception.ipynb  Lesson 10.17 Perceptron Algorithm.ipynb  Lesson 10.30 Gradient Descen.ipynb  Lesson 10.37 Multilayer Perceptrons.ipynb
Self-Driving_Car_part_1/Lesson_11_Tensorflow/: Hello world tf2.ipynb  Hello_world.ipynb  Lesson 11.15 Linear function.ipynb
Self-Driving_Car_part_1/Lesson_21_Kalman_Filters/: Kalman Matrices.ipynb
Self-Driving_Car_part_1/Lesson_24_Extended_Kalman_Filters/: CMakeLists.txt  main_24.19.cpp  main_24.23.cpp  main_24.7.cpp
Self-Driving_Car_part_1/Lesson_24_Extended_Kalman_Filters/24.13_laser_measurements/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  tracking.cpp
Self-Driving_Car_part_1/Project_05_LaneLines/: P1.ipynb  writeup_template.md
Self-Driving_Car_part_1/Project_09_AdvanchedLaneLines/: Calibrate camera.ipynb  Filter lanes.ipynb  Process images.ipynb  Process video.ipynb  writeup.md
Self-Driving_Car_part_1/Project_09_AdvanchedLaneLines/libs/: calibration.py  common.py  filter_image.py  find_lanes.py  polynom_finder.py
Self-Driving_Car_part_1/Project_25_EKF/CarND-Extended-Kalman-Filter-Project-master/: CMakeLists.txt
Self-Driving_Car_part_2/Lesson_02_Matkov_Localization/: CMakeLists.txt  help_functions.h  helpers.h  main.2.09.cpp  main.2.27.cpp  main.2.28.cpp  main.2.34.cpp  main.2.35.cpp  main.2.37.cpp  main.2.39.cpp
Self-Driving_Car_part_2/Lesson_04_Particle_Filters/: Robot.ipynb
Self-Driving_Car_part_2/Lesson_05_Implementation_Particle_Filter/: CMakeLists.txt  Junk.ipynb  main_5.05.cpp  main_5.16.cpp
Self-Driving_Car_part_2/Lesson_07_Search/: Lesson 7 Dijkstra.ipynb
Self-Driving_Car_part_2/Lesson_08_Prediction/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp
Self-Driving_Car_part_2/Lesson_09_Behavior_Planning/: CMakeLists.txt
Self-Driving_Car_part_2/Lesson_10_Trajectory_Generation/: CMakeLists.txt
Self-Driving_Car_part_2/Lesson_12_PID_Control/: Untitled.ipynb
Self-Driving_Car_part_2/Project_06_Localization/CarND-Kidnapped-Vehicle-Project/: CMakeLists.txt
Self-Driving_Car_part_2/Project_06_Localization/CarND-Kidnapped-Vehicle-Project/src/: main.cpp  particle_filter.cpp  particle_filter.h
(+61 files in other folders)
