cmake_minimum_required(VERSION 3.5)
project(Lesson_02)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lesson_02.9 main.2.09.cpp)
add_executable(Lesson_02.27 main.2.27.cpp)
add_executable(Lesson_02.28 main.2.28.cpp)
add_executable(Lesson_02.34 main.2.34.cpp)
add_executable(Lesson_02.35 main.2.35.cpp)
add_executable(Lesson_02.37 main.2.37.cpp)
add_executable(Lesson_02.39 main.2.39.cpp)
